--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "4.16.4"
+        "express": "4.16.4",
+        "ejs":"~2.6.1"
     },
     "author": "Steve",
     "license": "ISC"
